tests/neg-macros/ill-abort.check

-- Error: tests/neg-macros/ill-abort/quoted_2.scala:1:15 ---------------------------------------------------------------
1 |def test = fail() // error
  |           ^^^^^^
  |Macro expansion was aborted by the macro without any errors reported. Macros should issue errors to end-users to facilitate debugging when aborting a macro expansion.
  |---------------------------------------------------------------------------------------------------------------------
  |Inline stack trace
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  |This location contains code that was inlined from quoted_1.scala:3
3 |inline def fail(): Unit = ${ impl }
  |                          ^^^^^^^^^
   ---------------------------------------------------------------------------------------------------------------------
